Fix too big header that broke the layout on Fold device

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ header,
   justify-items: center;
   width: 100%;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
-  font-size: 5rem;
+  font-size: 3.5rem;
   padding-left: 10px;
 }
 
